hotfix: fixing color close-button, header-bar in dark mode & text color in dark mode

--- a/src/blocks/bikes/_bikes.scss
+++ b/src/blocks/bikes/_bikes.scss
@@ -152,5 +152,11 @@
         &:focus {
             outline: none;
         }
+
+        &_theme_dark {
+            color: $darkTextSecondary;
+        }
     }
+
+
 }
